Bug 363429 - KMM windows open behind CSV import wizard
Summary: KMM windows open behind CSV import wizard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 4.7.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-23 11:19 UTC by Jeremy Cooper
Modified: 2019-08-29 15:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Cooper 2016-05-23 11:19:35 UTC
When using the CSV import wizard, it keeps focus over all Windows that are open, even outside KMM.

Reproducible: Always

Steps to Reproduce:
1.Open the CSV Import Wizard
2. Open a window in Windows, e.g File Explorer

Actual Results:  
The Import CSV wizard stays on top of all windows.

Expected Results:  
CSV wizard would be sent further back allowing the other windows to be used.
Comment 1 wojnilowicz 2016-05-23 16:18:59 UTC
I can confirm that and I'm about to do something with that in near future. Just be patient :)
Comment 2 wojnilowicz 2016-08-06 11:16:49 UTC
Git commit d129b22e2da6e7972008f2b5ef3eccc95d758201 by Łukasz Wojniłowicz.
Committed on 06/08/2016 at 11:14.
Pushed by wojnilowicz into branch '4.8'.

Remove Qt::WindowStaysOnTopHint from CSV dialog

M  +0    -1    kmymoney/plugins/csvimport/csvdialog.cpp

http://commits.kde.org/kmymoney/d129b22e2da6e7972008f2b5ef3eccc95d758201