Remove Qt::WindowStaysOnTopHint from CSV dialog

BUG: 363429